logs/pastewebkit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteWebKit-1.0.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/paste/webkit'...
Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware'...
Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils'...
Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/CSVParser.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/CSVParser.py", line 225
    raise ParseError, '%s expected after "' % self._fieldSep
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DBPool.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DBPool.py", line 72
    raise UnsupportedError, "Database module does not support any level of threading."
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DataTable.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DataTable.py", line 287
    raise DataTableError, 'Invalid column spec %s' % repr(spec)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DictForArgs.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/DictForArgs.py", line 18
    raise DictForArgsError, 'Syntax error: %s' % repr(s)
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/Funcs.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/Funcs.py", line 90
    return os.open(path, os.O_RDWR|os.O_CREAT|os.O_EXCL, 0600), path
                                                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/M2PickleRPC.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/M2PickleRPC.py", line 36
    raise RuntimeError, 'unsupported Python version'
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/NamedValueAccess.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/NamedValueAccess.py", line 228
    raise NamedValueAccessError, 'Keys and defaults have mismatching lengths (%d and %d).' % (len(keys), len(defaults))
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PickleCache.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PickleCache.py", line 97
    if v: print '>> PickleCacheReader.read() - verbose is on'
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PickleRPC.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PickleRPC.py", line 177
    raise UnpicklingError, 'For security reasons, you can\'t unpickle objects from module %s with type %s' % (module, klass)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PropertiesObject.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/MiscUtils/PropertiesObject.py", line 57
    exec open(filename) in results
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit'...
Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Scheduler.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Scheduler.py", line 53
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Task.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Task.py", line 16
    raise AbstractError, self.__class__
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Tests'...
Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Tests/BasicTest.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/TaskKit/Tests/BasicTest.py", line 14
    print self.name(), time()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware/WebKit'...
Listing './lib/python3.5/site-packages/paste/webkit/FakeWebware/WebUtils'...
Compiling './lib/python3.5/site-packages/paste/webkit/FakeWebware/WebUtils/Funcs.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/FakeWebware/WebUtils/Funcs.py", line 127
    print 'DEPRECATED: WebUtils.Funcs.HTMLEncode() on 02/24/01 in ver 0.3. Use htmlEncode() instead.'
                                                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paste/webkit/examples'...
Listing './lib/python3.5/site-packages/paste/webkit/paster_templates'...
Listing './lib/python3.5/site-packages/paste/webkit/paster_templates/webkit'...
Listing './lib/python3.5/site-packages/paste/webkit/paster_templates/webkit/+package+'...
Listing './lib/python3.5/site-packages/paste/webkit/paster_templates/webkit/+package+/web'...
Listing './lib/python3.5/site-packages/paste/webkit/paster_templates/webkit/+project+.egg-info'...
Compiling './lib/python3.5/site-packages/paste/webkit/servlet_script.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/servlet_script.py", line 54
    print 'No template directory %s' % template_base
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/paste/webkit/wkservlet.py'...
***   File "./lib/python3.5/site-packages/paste/webkit/wkservlet.py", line 62
    except self.ReturnIterException, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
